# expense-tracker

./: .gitignore  claude.md  pytest.ini  start-servers.ps1  stop-servers.ps1
.claude/commands/: commit_push.md  create_pr.md
backend/: .env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_auth_tables.py  0002_add_name_fields_to_users.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/core/: exceptions.py
backend/app/models/: __init__.py  category.py  household.py  refresh_token.py  user.py
backend/app/routers/: auth.py  settings.py
backend/app/schemas/: auth.py  settings.py
backend/app/services/: auth_service.py  settings_service.py  token_service.py
backend/tests/: conftest.py  test_auth_routes.py  test_auth_service.py  test_settings_routes.py  test_token_service.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: authApi.ts  axiosClient.ts  settingsApi.ts
frontend/src/components/: PasswordStrengthMeter.tsx  ProtectedRoute.tsx  PublicRoute.tsx
frontend/src/pages/: DashboardPage.tsx  LoginPage.tsx  RegisterStep1Page.tsx  RegisterStep2Page.tsx  SettingsPage.tsx
frontend/src/store/: authStore.ts  (+1 more)
project_resources/: FamilyExpenseTracker_Requirements.docx  FamilyExpenseTracker_Wireframes_v1.0.docx  FamilyExpenseTracker_Wireframes_v1.1.docx  Low_Level_Technical_Architecture_Family_Expense_Tracker_V1.2.docx  Low_Level_Technical_Architecture_Family_Expense_Tracker_v1.1.docx
tests/backend/: conftest.py  test_auth.py
(+2 files in other folders)
